# RGE

./: .gitignore  AGENTS.md  AI_DISPATCH_AUTOMATION.md  AI_DISPATCH_BATCH_AUTHORIZATIONS.md  AI_DISPATCH_FULLAUTO_RUNBOOK.md  AI_DISPATCH_PARALLEL.md  AUTONOMOUS_WATCH.md  Cargo.toml  DocAuto.md  Get-AiDispatchHealth.ps1  Get-AiDispatchTrends.ps1  HANDOFF.md  Invoke-AiDispatchAuto.ps1  Invoke-AiDispatchGuard.ps1  Invoke-AiDispatchLoop.ps1  Invoke-AiDispatchQueue.ps1  PSScriptAnalyzerSettings.psd1  README.md  Register-AiDispatchSchedule.ps1  Status.md  Test-HandoffPacket.ps1  V0_RELEASE_CERTIFICATION.md  Wait-GitHubActions.ps1  Watch-AiDispatch.ps1  Watch-DispatchStages.ps1  change.md  deny.toml
.ai/: claude_execution_result.schema.json  claude_plan_gate.schema.json  codex_control.schema.json  dispatch.tasks.archive.md  dispatch.tasks.md  dispatch.verify.ps1
ai_dispatch_logs/: log_2026-05-17_17-19-40+0300.md  log_2026-05-17_23-01-21+0300.md  log_2026-05-17_23-17-43+0300.md  log_2026-05-18_01-24-56+0300.md  log_2026-05-18_08-25-07+0300.md  log_2026-05-18_08-55-54+0300.md  log_2026-05-18_11-33-18+0300.md  log_2026-05-18_13-54-39+0300.md  log_2026-05-18_14-46-06+0300.md  log_2026-05-18_15-17-13+0300.md  log_2026-05-18_15-37-17+0300.md  log_2026-05-18_16-35-05+0300.md  log_2026-05-18_18-44-58+0300.md  log_2026-05-18_19-12-34+0300.md  log_2026-05-19_00-40-16+0300.md  log_2026-05-19_01-37-58+0300.md  log_2026-05-19_02-42-14+0300.md  log_2026-05-19_05-07-50+0300.md  log_2026-05-19_09-39-01+0300.md  log_2026-05-19_14-02-09+0300.md  log_2026-05-19_14-33-47+0300.md  log_2026-05-19_14-59-01+0300.md  log_2026-05-19_15-37-31+0300.md  log_2026-05-19_19-39-04+0300.md  log_2026-05-20_01-19-13+0300.md  log_2026-05-20_02-18-53+0300.md  log_2026-05-20_02-55-06+0300.md  log_2026-05-20_10-02-51+0300.md  log_2026-05-20_16-45-41+0300.md  log_2026-05-20_18-07-11+0300.md  log_2026-05-20_19-21-28+0300.md  log_2026-05-20_23-01-51+0300.md  log_2026-05-20_23-23-15+0300.md  log_2026-05-21_01-15-07+0300.md  log_2026-05-21_01-47-53+0300.md  log_2026-05-21_02-17-58+0300.md  log_2026-05-21_02-46-07+0300.md  log_2026-05-22_13-59-50+0300.md  log_2026-05-22_17-01-46+0300.md  log_2026-05-22_20-46-52+0300.md  (+97 more)
crates/anim-graph/: Cargo.toml
crates/anim-graph/src/: lib.rs
crates/cad-projection/: Cargo.toml
crates/cad-projection/src/: lib.rs  plugin_adapter.rs
crates/cad-projection/src/projection_cache/: mod.rs
crates/cad-projection/src/projection_geometry/: mod.rs
crates/cad-projection/src/projection_structural/: mod.rs
crates/cad-projection/tests/: brep_face_id_lookup_smoke.rs  extrude_brep_face_id_lookup_smoke.rs  face_picking_smoke.rs  multi_canary_integration.rs  render_adapter_smoke.rs  round_fillet_brep_face_id_lookup_smoke.rs  sweep_brep_face_id_lookup_smoke.rs  transform_brep_face_lookup_smoke.rs
crates/components-render/: Cargo.toml
crates/components-render/src/: camera.rs  light.rs
crates/components-render/tests/: ecs_attach.rs
crates/components-spatial/: Cargo.toml
crates/components-spatial/src/: transform.rs
crates/components-spatial/tests/: ecs_attach.rs
crates/components-visibility/: Cargo.toml
crates/components-visibility/src/: visibility.rs
crates/components-visibility/tests/: ecs_attach.rs
crates/editor-egui-host/: Cargo.toml
crates/editor-egui-host/src/: handoff.rs  lib.rs  menu.rs  menu_tests.rs  shortcut_help.rs  tabs.rs
crates/editor-egui-host/tests/: dock_layout_smoke.rs  host_scaffolding_smoke.rs  inspector_handoff_smoke.rs  tab_body_smoke.rs  viewport_pointer_smoke.rs
crates/editor-shell/: Cargo.toml
crates/editor-shell/src/: camera.rs  coord.rs  inspector.rs  lib.rs  lifecycle.rs  render_frame_e2e_perf.rs  render_input.rs  render_path.rs  visual_smoke.rs  world.rs
crates/editor-shell/src/lifecycle/: accelerator.rs  asset_reload.rs  commands.rs  extension_command.rs  mod.rs  open_request.rs  playback.rs  save_request.rs  tests.rs  unsaved_changes.rs  viewport_navigation.rs
crates/editor-shell/tests/: camera_picker_smoke.rs  editor_coord_face_selection.rs  inspector_snapshot_smoke.rs  keyboard_command_bus_round_trip.rs  render_input_boundary.rs  time_scale_test.rs
crates/editor-ui/: Cargo.toml
crates/editor-ui/src/: lib.rs  plugin_adapter.rs
crates/editor-ui/src/layout/: io.rs  mod.rs  node.rs  reconcile.rs  version.rs  workspace.rs
crates/editor-ui/src/menus/: command.rs  default_menu.rs  entry.rs  keybinding.rs  mod.rs  predicate.rs  registry.rs
crates/editor-ui/src/widgets/: inspector.rs  mod.rs  node_graph.rs
crates/editor-ui/tests/: inspector_widget_smoke.rs  menus_ordering.rs  node_graph_phase8_three_domain_smoke.rs  phase8_graph_diff_smoke.rs  plugin_adapter_smoke.rs
crates/gfx/: Cargo.toml
crates/gfx/src/: context.rs  intent_adapter.rs  lib.rs  lit_mesh_pipeline.rs  material.rs  mesh_pipeline.rs  pipeline.rs  pso_cache.rs  surface.rs
crates/gfx/src/frame_graph/: buffer_pool.rs  compile.rs  descriptor.rs  mod.rs  pass.rs  resource.rs  texture_pool.rs
crates/gfx/src/frame_graph/compile/: algorithm.rs  error.rs  mod.rs  types.rs
crates/gfx/tests/: frame_graph_smoke.rs  frame_graph_umbrella_smoke.rs  gate_a_simple_scene_60fps.rs  gate_a_simple_scene_depth_60fps.rs  material_intent_pso_sharing.rs  render_mesh_smoke.rs
crates/io-gltf/: Cargo.toml
crates/io-gltf/src/: asset_store_cache.rs  cache_stub.rs  lib.rs
crates/io-gltf/tests/: textured_uv_cube_test.rs
crates/io-gltf/tests/common/: mod.rs
crates/io-gltf/tests/fixtures/: textured_uv_cube.glb
crates/rge-data/: Cargo.toml
crates/rge-data/tests/: golden_simple_scene_load_tick.rs  golden_simple_scene_schema.rs
crates/script-bench/: BASELINE.md  Cargo.toml  METHODOLOGY.md
crates/script-bench/src/: lib.rs  script_host.rs  wasmtime_cranelift.rs  wasmtime_singlepass.rs
editor/rge-editor/: Cargo.toml
editor/rge-editor/src/: glb_watcher.rs  main.rs
kernel/ecs/: Cargo.toml
kernel/ecs/src/: snapshot.rs
runtime/runtime-headless/: Cargo.toml
runtime/runtime-headless/src/: main.rs
runtime/runtime-headless/tests/: loads_golden_simple_scene.rs
(+2040 files in other folders)
