[package]
name        = "rge-anim-graph"
description = "animation state machine + blend tree"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

[dependencies]
rge-kernel-graph-foundation = { workspace = true }

[lints]
workspace = true
