[package]
name        = "rge-cad-projection"
description = "CAD-to-ECS view layer"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

[dependencies]
rge-cad-core                = { path = "../cad-core" }
rge-brep-render             = { path = "../brep-render" }
rge-kernel-ecs              = { workspace = true }
rge-kernel-graph-foundation = { workspace = true }
rge-kernel-diagnostics      = { workspace = true }
rge-kernel-plugin-host      = { workspace = true }
serde                       = { workspace = true }
postcard                    = { workspace = true }
ron                         = { workspace = true }
thiserror                   = { workspace = true }
tracing                     = { workspace = true }
# ulid is re-imported here to enable its optional `serde` feature for
# EntityId round-trip serialisation in the SnapshotParticipate payload.
# The authoritative EntityId definition lives in rge-kernel-ecs.
ulid                        = { version = "1", features = ["serde"] }

[dev-dependencies]
# Cross-substrate composition tests (audit-2026-05-09 round 6 C3 + H4 closure).
# The `multi_canary_integration` test stages all four Tier-2 canary substrates
# (cad-projection, gfx, physics, audio) into a single PluginContext, so we
# need their crate handles in test scope. The `cross_substrate_determinism`
# 3-way PIE test additionally needs `rge-physics::World` for the third
# participant and `blake3` for digest comparison. These are dev-only —
# production cad-projection still only depends on cad-core + kernel — so the
# [forbidden-dep] lint's existing logic treats Tier-2→Tier-2 cad-projection →
# {gfx,physics,audio} as benign: cad-projection is not cad-core, not
# editor-ui, not physics, and not a renderer crate, so none of rules 1-6 fire.
rge-gfx                     = { path = "../gfx" }
rge-physics                 = { path = "../physics" }
rge-audio                   = { path = "../audio" }
# Editor selection persistence sub-α end-to-end smoke test wires
# `editor-state::FaceSelectionSet::partition` through
# `cad-projection::CadProjection::face_resolves_in_projection`. dev-only;
# production cad-projection still only depends on cad-core + kernel.
rge-editor-state            = { path = "../editor-state" }
# kira's MockBackend is required to construct an AudioManager headlessly,
# matching the audio canary's plugin smoke-test pattern.
kira                        = { workspace = true }
# BLAKE3 hashing — used in the 3-way PIE round-trip test to digest physics
# state and projected-mesh bytes for byte-identity comparison. Same pattern
# as physics/Cargo.toml dev-dependencies (BLAKE3 is already a workspace dep).
blake3                      = { workspace = true }
# glam — used by `tests/face_selection_smoke.rs` for the inline
# `screen_to_world_ray` helper that mirrors
# `editor-shell::camera::CameraView::screen_to_world_ray`. We cannot
# depend on editor-shell here because editor-shell already depends on
# cad-projection in production — a dev-dep cycle is rejected by cargo.
# The canonical screen→world math is unit-tested in editor-shell's own
# test suite; this dev-dep enables the mirror without crossing the
# editor-shell boundary. glam is utility/runtime (not in any
# is_game_domain / is_renderer_crate prefix in forbidden-dep), so this
# dev-edge does not trip the lint.
glam                        = "0.30"

[lints]
workspace = true
