[package]
name        = "rge-components-render"
description = "ECS components: MeshHandle, MaterialHandle, Camera, Light, BRepHandle, ReflectionProbe"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

[dependencies]
rge-kernel-asset = { workspace = true }
rge-kernel-ecs = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
ron = { workspace = true }

[lints]
workspace = true
