[package]
name        = "rge-components-visibility"
description = "ECS components: Visibility, Hidden, Disabled, Highlight"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

[dependencies]
rge-kernel-ecs = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
ron = { workspace = true }

[lints]
workspace = true
