[package]
name        = "rge-editor-shell"
description = "editor host (winit + lifecycle + PIE)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

# W03: PIE skeleton. Cross-crate deps (kernel/ecs World+Snapshot, editor-state
# Selection/ActiveTool, kernel/audit-ledger) are stubbed *locally* inside this
# crate per W03 dispatch non-interference rule. When their owning crates land
# (W02/Phase 5 integration), the stubs swap for the real types behind a
# `#[cfg]` feature; the public API of editor-shell is shaped to make that
# swap a typedef change rather than a callsite rewrite.

[dependencies]
winit             = { workspace = true }
tracing           = { workspace = true }
serde             = { workspace = true, optional = true }
ron               = { workspace = true, optional = true }
rge-editor-state  = { path = "../editor-state" }
rge-kernel-ecs    = { path = "../../kernel/ecs" }
# Render-backed face-selection sub-β: production dep on cad-projection so
# `editor-shell::camera::CameraView::screen_to_world_ray` returns the
# existing picker's `cad_projection::picking::Ray` shape directly. Tier-2
# editor crate → Tier-2 game-domain crate (rule 6 of `forbidden-dep` only
# forbids RENDERER_CRATES → game-domain; editor-shell is NOT a renderer
# crate, so the editor → projection path is permitted).
rge-cad-projection = { path = "../cad-projection" }
# 4×4 matrix inverse for screen→world ray unprojection. `gfx` already uses
# the same minor (`0.30`); editor-shell pins it without `bytemuck` since
# it's CPU-only and never touches GPU buffers.
glam              = "0.30"
ulid              = { workspace = true }

[features]
default = []
# Optional `ron`-backed scene fixture loader for the round-trip integration
# test. Off by default so `cargo check -p rge-editor-shell` does not pull
# serde transitives into the dep tree of every downstream crate.
fixture-ron = ["serde", "ron"]

[dev-dependencies]
serde       = { workspace = true }
ron         = { workspace = true }
# Test-only access to BRepOwnerId / BRepFaceId / CuboidFaceTag for constructing
# FaceSelection instances in `tests/editor_coord_face_selection.rs` (editor
# selection persistence sub-β). NOT a production dep — editor-shell itself
# does not import cad-core in production code; the production wiring receives
# already-constructed FaceSelection values from upstream callers.
rge-cad-core = { path = "../cad-core" }

[lints]
workspace = true
