[package]
name        = "rge-editor-shell"
description = "editor host (winit + lifecycle + PIE)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

# W03: PIE skeleton. Cross-crate deps (kernel/ecs World+Snapshot, editor-state
# Selection/ActiveTool, kernel/audit-ledger) are stubbed *locally* inside this
# crate per W03 dispatch non-interference rule. When their owning crates land
# (W02/Phase 5 integration), the stubs swap for the real types behind a
# `#[cfg]` feature; the public API of editor-shell is shaped to make that
# swap a typedef change rather than a callsite rewrite.

[dependencies]
winit             = { workspace = true }
tracing           = { workspace = true }
serde             = { workspace = true, optional = true }
ron               = { workspace = true, optional = true }
rge-editor-state  = { path = "../editor-state" }
rge-kernel-ecs    = { path = "../../kernel/ecs" }
# Render-backed face-selection sub-β: production dep on cad-projection so
# `editor-shell::camera::CameraView::screen_to_world_ray` returns the
# existing picker's `cad_projection::picking::Ray` shape directly. Tier-2
# editor crate → Tier-2 game-domain crate (rule 6 of `forbidden-dep` only
# forbids RENDERER_CRATES → game-domain; editor-shell is NOT a renderer
# crate, so the editor → projection path is permitted).
rge-cad-projection = { path = "../cad-projection" }
# Render-backed face-selection sub-δ.1.B: editor-shell wires gfx + brep-render
# through `EditorShell::resumed` / `RedrawRequested` / `Resized` to put a
# triangle on screen. editor-shell is editor-tier (NOT renderer-tier), so
# `forbidden-dep` rule 6 (RENDERER_CRATES → game-domain forbidden) does NOT
# fire — editor → renderer is permitted.
rge-gfx           = { path = "../gfx" }
rge-brep-render   = { path = "../brep-render" }
# Sub-δ.1.B promotes rge-cad-core from dev-dep to production: the
# `with_world_projection_graph` constructor takes a `CadGraph` by value
# so the editor binary can hand a pre-built operator graph through.
# Editor-tier → game-domain Tier-2 (rule 6 doesn't apply; editor-shell
# is NOT a renderer crate).
rge-cad-core      = { path = "../cad-core" }
# 4×4 matrix inverse for screen→world ray unprojection. `gfx` already uses
# the same minor (`0.30`); editor-shell pins it without `bytemuck` since
# it's CPU-only and never touches GPU buffers.
glam              = "0.30"
ulid              = { workspace = true }
# Sub-δ.1.B: command encoder / render pass / surface texture types are
# referenced directly in the render path. `gfx` re-exports nothing of these
# (it owns wgpu internally); editor-shell pins the same workspace pin.
wgpu              = { workspace = true }

[features]
default = []
# Optional `ron`-backed scene fixture loader for the round-trip integration
# test. Off by default so `cargo check -p rge-editor-shell` does not pull
# serde transitives into the dep tree of every downstream crate.
fixture-ron = ["serde", "ron"]

[dev-dependencies]
serde       = { workspace = true }
ron         = { workspace = true }
# Sub-δ.1.B promotes `rge-cad-core` from dev-dep to PRODUCTION (above) — the
# `with_world_projection_graph` constructor consumes `CadGraph` by value.
# The legacy dev-dep comment retained as a historical marker; the dep now
# lives in `[dependencies]` and the test files keep working unchanged.

[lints]
workspace = true
