[package]
name        = "rge-gfx"
description = "wgpu substrate: Instance/Adapter/Device/Queue, headless render target, trivial pipeline"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

[dependencies]
wgpu                          = { workspace = true }
pollster                      = "0.4"
bytemuck                      = { version = "1", features = ["derive"] }
glam                          = { version = "0.30", features = ["bytemuck"] }
rge-kernel-diagnostics        = { workspace = true }
# Tier-1 plugin substrate — gfx hosts a Tier-2 plugin canary
# (`GfxPlugin`, the second canary after cad-projection per ADR-114).
# Tier-2 → Tier-1 dep is allowed under the `forbidden-dep` lint (rule 6
# only forbids game-domain crates for renderers; plugin-host is Tier-1
# kernel substrate, not game-domain).
rge-kernel-plugin-host        = { workspace = true }
# Tier-1 graph substrate — frame_graph wraps `Graph<PassNode, ()>` per
# PLAN §1.14 (graph-foundation discipline; reuse, don't reinvent).
rge-kernel-graph-foundation   = { workspace = true }
# Required for StableHash impl on PassNode (`fn hash_into(&self, &mut blake3::Hasher)`).
blake3                        = { workspace = true }
serde                         = { workspace = true }
thiserror                     = { workspace = true }
tracing                       = { workspace = true }

[dev-dependencies]
# No extra dev deps needed; wgpu is already a dependency.

[lints]
workspace = true
