[package]
name        = "rge-gfx"
description = "wgpu substrate: Instance/Adapter/Device/Queue, headless render target, trivial pipeline"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

[dependencies]
wgpu                          = { workspace = true }
pollster                      = "0.4"
bytemuck                      = { version = "1", features = ["derive"] }
glam                          = { version = "0.30", features = ["bytemuck"] }
rge-kernel-diagnostics        = { workspace = true }
# Tier-1 plugin substrate — gfx hosts a Tier-2 plugin canary
# (`GfxPlugin`, the second canary after cad-projection per ADR-114).
# Tier-2 → Tier-1 dep is allowed under the `forbidden-dep` lint (rule 6
# only forbids game-domain crates for renderers; plugin-host is Tier-1
# kernel substrate, not game-domain).
rge-kernel-plugin-host        = { workspace = true }
# Tier-1 graph substrate — frame_graph wraps `Graph<PassNode, ()>` per
# PLAN §1.14 (graph-foundation discipline; reuse, don't reinvent).
rge-kernel-graph-foundation   = { workspace = true }
# Renderer-tier sibling — sub-δ.1.A `LitMesh::from_render_mesh` adapter
# converts brep-render's CPU-side flat-shaded `RenderMesh` into
# gfx's GPU-uploaded `LitMesh`. brep-render is itself in
# `RENDERER_CRATES`, so gfx → brep-render is intra-renderer-tier and
# permitted by rule 6 (which only forbids RENDERER → game-domain).
rge-brep-render               = { path = "../brep-render" }
# Window substrate for `SurfaceContext` (sub-δ.1.A). winit is a
# utility/runtime crate (not under any `is_game_domain` prefix), so
# rge-gfx → winit passes the forbidden-dep lint.
winit                         = { workspace = true }
# Required for StableHash impl on PassNode (`fn hash_into(&self, &mut blake3::Hasher)`).
blake3                        = { workspace = true }
serde                         = { workspace = true }
thiserror                     = { workspace = true }
tracing                       = { workspace = true }

[dev-dependencies]
# No extra dev deps needed; wgpu is already a dependency.

[lints]
workspace = true
