[package]
name        = "rge-io-gltf"
description = "glTF 2.0 import/export — adapts ECS scene to/from glTF, asset-store-backed mesh/material/animation/skeleton handles."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

[dependencies]
# gltf 1.4.x: drop the `import` feature deliberately. Architectural
# reason (per PLAN.md §1.6.4 "one importer per format"): if we enabled
# default features, gltf would transitively pull `image`, violating the
# rule that `crates/io-image` is the sole authority for raster formats.
# We do our own GLB I/O via `Gltf::from_slice` + the BIN blob.
gltf       = { workspace = true, default-features = false, features = ["utils", "names"] }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
blake3     = { workspace = true }
# Dispatch L — io-tier -> io-tier edge for embedded glTF image bytes.
# io-gltf now extracts buffer-view and `data:image/...;base64,...` source
# images and dispatches the encoded bytes through `rge_io_image::load_bytes`
# to decode into `Image { Rgba8|16|32F }`. Keeps the
# one-import-path-per-format rule (PLAN §1.6.5) intact — io-image stays
# the single owner of raster codecs; io-gltf only handles the glTF
# embedding semantics.
rge-io-image = { path = "../io-image" }
# ISSUE-94 — opt-in adapter dep so callers can back the local typed
# `crate::Cache` with a `dyn rge_asset_store::Cache` byte store. Direct
# path dep (not via workspace.dependencies) because this is the only
# crate that needs it today; see `asset_store_cache.rs` and the W17/W16
# stub-policy note in `cache_stub.rs`.
rge-asset-store = { path = "../asset-store" }

[dev-dependencies]
ron = { workspace = true }

[lints]
workspace = true
