[package]
name        = "rge-data"
description = "project/scene/prefab schemas + migrations"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

[dependencies]
rge-kernel-asset = { workspace = true }
serde     = { workspace = true }
ron       = { workspace = true }
ulid      = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }

[dev-dependencies]
rge-kernel-ecs = { workspace = true }

[lints]
workspace = true
