[package]
name        = "rge-script-bench"
description = "scripting benchmark suite — harness, native-Rust baseline, output format"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

[dependencies]
rge-kernel-diagnostics = { path = "../../kernel/diagnostics" }
rge-kernel-ecs         = { path = "../../kernel/ecs" }
rge-kernel-events      = { path = "../../kernel/events" }
rge-script-host        = { path = "../script-host" }

serde      = { workspace = true }
serde_json = { workspace = true }
# `winch` feature added 2026-05-12 for W04 sub-β (raw WasmtimeSinglepass /
# Winch cross-engine column). Cargo feature unification merges this with
# the workspace declaration's `["cranelift", "runtime", "std"]` list, so
# wasmtime is compiled with `["cranelift", "runtime", "std", "winch"]`.
# Kept localised to script-bench (the only consumer) rather than
# workspace-wide — the runtime-wasmtime / runtime-wasmtime-engine /
# script-host crates keep their default-Cranelift-only path.
wasmtime   = { workspace = true, features = ["winch"] }
wat        = "1"

[dev-dependencies]
# v0.0.1: criterion is a local dep until promoted to a workspace pin.
# Bench harness only — does not flow to downstream crates.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support", "plotters"] }

[lib]
bench = false

[[bench]]
name    = "script_tick_1m"
harness = false

[[bench]]
name    = "cold_start"
harness = false

[[bench]]
name    = "memory_overhead"
harness = false

[[bench]]
name    = "hot_reload_swap"
harness = false

[lints]
workspace = true
