[package]
name        = "rge-editor"
description = "RGE editor host application"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

[[bin]]
name = "rge-editor"
path = "src/main.rs"

[dependencies]
# Sub-δ.1.B: real winit binary that opens a window and renders one cuboid.
# Constructs a CadGraph + CadProjection + World, spawns a single Cuboid
# entity, hands them to EditorShell::with_world_projection_graph and runs
# the winit event loop. No mouse interaction / picking / selection (sub-δ.2).
rge-editor-shell    = { path = "../../crates/editor-shell" }
rge-cad-core        = { path = "../../crates/cad-core" }
rge-cad-projection  = { path = "../../crates/cad-projection" }
rge-kernel-ecs      = { path = "../../kernel/ecs" }
# Dispatch G — `--glb <path>` render-only mesh ingestion. Editor-tier
# binary depending on game-domain crates (`rge-io-*`, `rge-brep-*`) is
# permitted; `forbidden-dep` rule 6 only blocks RENDERER_CRATES →
# game-domain. `rge-editor` is not a renderer crate.
rge-io-gltf         = { path = "../../crates/io-gltf" }
rge-brep-render     = { path = "../../crates/brep-render" }
winit               = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }

[lints]
workspace = true
